--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "scripts": {
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url":"https://github.com/zhenxzheng/portfolio2"
+  },
+
+  "private": true,
+  "scripts":{
+    "start":"node app.js"
+  },
+  
   "dependencies": {
     "express": "3.x",
     "express3-handlebars": "*",
