--- a/projects.json
+++ b/projects.json
@@ -87,7 +87,7 @@
 			"id": 8,
 			"title": "Icon Design",
 			"url": "IconDesign",
-			"preview":"Project/DBPreview.jpg"
+			"preview":"Project/IconPreview.jpg"
 		}
 	]
 }
