--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   },
   "repository": {
     "type": "git",
-    "url":"https://github.com/zhenxzheng/portfolio2"
+    "url": "https://github.com/zhenxzheng/portfolio2"
   },
-  
   "dependencies": {
     "express": "3.x",
     "express3-handlebars": "*",
     "mongodb": "*",
     "mongoose": "*",
     "dotenv": "*",
-    "serve-favicon":"*"
+    "instagram-node-lib": "*",
+    "serve-favicon": "*",
+    "prerender-node": "^1.2.1"
   },
   "engines": {
     "node": "0.10.x"
-  }  
+  }
 }
